change ja va version 20